--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>My Web Site</title>
+
+  <link href="seasons.css" rel="stylesheet" type="text/css">
+  <header>The Seasons!</header>
+
+
+<title> The Seasons</title>
 </head>
 
-<body>
+<body style="background: url(indexhomepic.jpg);
+background-size: cover;
+background-repeat: no-repeat;">
+  <nav>
+    <ul>
 
-  <h1>My Home Page</h1>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="springbut" href="spring.html">Spring</a> </li>
+      <li><a class="summerbut" href="summer.html">Summer</a></li>
+      <li><a class="fallbut" href="fall.html">Fall</a></li>
+      <li><a class="winterbut" href="winter.html">Winter</a> </li>
+    </ul>
+  </nav>
 
-<!--Start unordered list of navigation links-->
-
-  <ul>
-    <li><a href="index.html">Home page</a></li>
-    <li><a href="page2.html">Page 2</a></li>
-    <li><a href="page3.html">Page 3</a></li>
-  </ul>
-
-<!--Start unordered list of navigation links-->
-
+  <p class="indexparagraph"> My sick webpage will include cool pictures of each season. Along with a short memory from me.</p>
 </body>
 
-</html>
+
+
+
+
+<html>
