--- a/spring.html
+++ b/spring.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="background: url(spring.jpg);
-background-size: cover;
+background-size: 100%;
 background-repeat: no-repeat;">
 
 
