--- a/webhost.html
+++ b/webhost.html
@@ -6,16 +6,18 @@
 
   <body>
 <h1>Website Review</h1>
-<h2><a href="https://www.espn.com">ESPN</a></h2>
+    <h2><a href="https://www.espn.com">ESPN</a></h2>
+    
   <p>What I love most about the ESPN website is how convenient it is since I'm just a sports nerd. I like how I can find any news, scores, or standings all in one spot. Probably my most favorite
-  feature is how it will auto reload the scores every few seconds. The only thing I'm not a huge fan of are the flashy pop up ads. The ads at times can be very huge and it just being obnoxious. </p>
-<h2><a href="https://www.bestbuy.com">BestBuy</a></h2>
+  feature is how it will auto reload the scores every few seconds. I also really enjoy how ESPN does include the smaller sports, like tennis golf, rugby, and just many more. It doesn't just show the big 3. While the coverage might not be as good it is at least aknowledging them. The only thing I'm not a huge fan of are the flashy pop up ads. The ads at times can be very huge and it just being obnoxious. An issue I had while doing this assignment is it doesn't cut in half like other websites. It seems to glitch when you try to minimize it on the computer. Along with loading more slowy when its small compared to full screen which I found that to be quite odd.  </p>
 
-  <p>BestBuy has a great website. Its super userfriendly and just easy to navigate with. They also make the website super pleasing to the eye with the blue and yellow. It makes it feel super mellow. With BestBuy they have a super easy menu to use. You don't have to me an electronic geek to find items. You can search super bland words and they will find what you have. It also updates super quick. I've seen them sell out in items and I've seen it count down like it saying 3 items left, then couple seconds refreshing to say 2 left. Its just a great website that I've never had problems with mobile and on computer.</p>
-<h2><a href="https://www.walmart.com">Walmart</a></h2>
+    <h2><a href="https://www.bestbuy.com">BestBuy</a></h2>
 
-  <p>Walmart is the website which I hate. On mobile it has been far worse then on my computer. It will randomly change my home store while on the app, and put it to completely randomly store in another state.
-    It will also have extreme lag issues. It also seems to glitch on in stock and out of stock items. I have added items to my cart when it says there is plenty in stock then it will load slowly and kick me off saying none are in stock. I also hate how they now let 3rd party sellers so they can jack up prices on items. I just try to avoid shopping on Walmarts website.
+  <p>BestBuy has a great website. Its super userfriendly and just easy to navigate with. They also make the website super pleasing to the eye with the blue and yellow. It makes it feel super mellow. With BestBuy they have a super easy menu to use. You don't have to me an electronic geek to find items. You can search super bland words and they will find what you have. It also updates super quick. I've seen them sell out in items and I've seen it count down like it saying 3 items left, then couple seconds refreshing to say 2 left. Its just a great website that I've never had problems with mobile and on computer. I do get annoyed that when its half screen on my computer I do have to move my sceen horizontally to see everything. I know its not really the websites fault but I do get extremely irritated when I see an item on sale and they try to make it bold and super flashy.Currently they have a 24 hour sale and its just in bold and a colorful yellow color trying catch your eyes.  </p>
+
+    <h2><a href="https://www.walmart.com">Walmart</a></h2>
+
+  <p>Walmart is the website which I hate. On mobile it has been far worse then on my computer. It will randomly change my home store while on the app, and put it to completely randomly store in another state.It will also have extreme lag issues. It also seems to glitch on in stock and out of stock items. I have added items to my cart when it says there is plenty in stock then it will load slowly and kick me off saying none are in stock. I also hate how they now let 3rd party sellers so they can jack up prices on items. I just try to avoid shopping on Walmarts website. I am a fan of there pop up menu. I do like being able to glide over the menu and not having to click back and fourth. I can still be looking at the same product and also navigate through the menu very quickly. They also do fit their website on half screen on my computer. Out of my 3 websites it is the only one with no known issues I've caught. A feature I haven't seen anywhere else that I've only seen on walmart is the speed option for pickup. You can filter the filer pickup to see whats avaiable at certain times. Thats pretty neat feature I hope others take on. 
 </p>
   </body>
 </html>
